--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script); /* font-family: 'Clicker Script', cursive; */
 
 /* scale all images, and media to accomodate responsive layout. */
-img, video, audio, iframe, table, form { 
+img, video, audio, iframe, table, form {
 	width:100%; /* IE */
 	max-width: 100%; /* FF, Safari, Chrome */
 }
@@ -303,3 +303,56 @@ footer {
 	}
 
 /* code examples copyright Jonathan Grover 2012 */
+
+img, video, audio {
+  max-width: 100%;
+}
+
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
+}
+
+.col-1{
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-2{
+  float: left;
+  width: 66%;
+  background: #ccc;
+}
+
+.col-3{
+  background: #ccc;
+}
+
+.clearfix:after{
+  content:".";
+  display:block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+[class*="col-"]{
+  margin-left:2%;
+}
+
+.first{
+  margin-left:0%;
+}
+
+section{
+  padding: 20px;
+  margin-bottom: 20px;
+}
